--- a/views/reportes/libro_diario.html
+++ b/views/reportes/libro_diario.html
@@ -25,198 +25,203 @@
 </style>
 <!-- widget grid -->
 <section id="widget-grid" class="">
-   <!-- row -->
-	<div class="row">
-   	<article class="col-sm-12">
-         <!-- new widget -->
-         <div class="jarviswidget" id="wid-id-0" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
-         <!-- widget options:
-          usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
-          data-widget-colorbutton="false"
-          data-widget-editbutton="false"
-          data-widget-togglebutton="false"
-          data-widget-deletebutton="false"
-          data-widget-fullscreenbutton="false"
-          data-widget-custombutton="false"
-          data-widget-collapsed="true"
-          data-widget-sortable="false"
-         -->
-    			<header>
-               <span class="widget-icon"> <i class="fa fa-book txt-color-darken"></i> </span>
-               <h2>Libro diario</h2>
-               <ul class="nav nav-tabs pull-right in" id="myTab">
-                  <li class="active">
-                     <a data-toggle="tab" href="#s1"><i class="fa fa-file-text-o"></i> <span class="hidden-mobile hidden-tablet">Reporte</span></a>
-                  </li>
-               </ul>
-       		</header>
-            <!-- widget div-->
-            <div class="no-padding">
-               <!-- widget edit box -->
-               <div class="jarviswidget-editbox">
-                       test
-               </div>
-               <!-- end widget edit box -->
-               <div class="widget-body">
-                  <!-- content -->
-                  <div id="myTabContent" class="tab-content">
-                     <div class="tab-pane fade active in padding-10 no-padding-bottom" id="s1">
-                     	<div class="padding-10">
-                     		<div class="panel panel-info">
-									  	<div class="panel-heading" id="abrir-campos-filtro" title="Mostrar/ocultar los filtros" style="cursor: pointer;">
-									    	<h3 class="panel-title" style="font-size: 14px;">Filtros de búsqueda <i class="fa fa-chevron-down"></i></h3>
-									  	</div>
-									  	<div class="panel-body" id="campos-filtro">
-									  		<form class="smart-form" method="POST" id="filtros" name="filtros">
-										  		<!--<article class="col-sm-12 col-md-12 col-lg-4">-->
-										  		<div role="content">
-										  			<div class="widget-body no-padding" >
-										  					<fieldset class="col-sm-12 col-md-12 col-lg-4">
-											  					<section>
-																	<label class="label">Tipo de póliza</label>
-																	<label class="select">
-																		<select id="tipo-poliza" name="tipo_poliza_id" class="activo">
-																			<option value="">Todos</option>
-																			{{for tp in tipo_poliza:}}
-																			<option value="{{=tp.id}}" {{=XML("selected='selected'") if str(tp.id)==request.vars.tipo_poliza_id else ""}}>{{=tp.nombre}}</option>
-																			{{pass}}
-																		</select>
-																	</label>
-																</section>
-																<section>
-																	<label class="label">Fecha inicial</label>
-																	<label class="input">
-																		<div class="input-group">
-																		  	<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-																		  	<input type="text" name="fecha_ini" class="activo fecha form-control input-sm" placeholder="Fecha inicio" value="{{=XML(request.vars.fecha_ini) if request.vars.fecha_ini else ''}}">
-																		</div>
-																	</label>
-											  					</section>
-											  					<section>
-											  						<label class="label">Fecha final</label>
-																	<label class="input">
-																		<div class="input-group">
-																		  	<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-																		  	<input type="text" name="fecha_fin" class="activo fecha form-control input-sm" placeholder="Fecha fin" value="{{=XML(request.vars.fecha_fin) if request.vars.fecha_fin else ''}}">
-																		</div>
-																	</label>
-											  					</section>
-										  					</fieldset>
-										  					<fieldset class="col-sm-12 col-md-12 col-lg-4">
-											  					<section>
-											  						<label class="label">Concepto de la póliza</label>
-																	<label class="input">
-																		<div class="input-group">
-																		  	<span class="input-group-addon"><i class="fa fa-edit"></i></span>
-																		  	<input type="text" name="concepto_general" class="activo form-control input-sm" placeholder="Concepto de la póliza" value="{{=XML(request.vars.concepto_general) if request.vars.concepto_general else ''}}">
-																		</div>
-																	</label>
-											  					</section>
-																<section>
-											  						<label class="label"><input type="checkbox" id="num-poliza" > Número de póliza</label>
-																	<label class="input">
-																		<div class="input-group">
-																	      <span class="input-group-addon">
-																	        	#
-																	      </span>
-																	      <input type="text" class="form-control input-sm" id="campo-num-poliza" name="num_poliza" value="{{=XML(request.vars.num_poliza) if request.vars.num_poliza else ''}}">
-																	   </div><!-- /input-group -->
-																	</label>
-											  					</section>
-											  					<!--<section>
-											  						<label class="label">Importe</label>
-																	<label class="input">
-																		<div class="input-group">
-																	      <span class="input-group-addon">
-																	        	$
-																	      </span>
-																	      <input type="text" class="form-control input-sm">
-																	   </div>
-																	</label>
-											  					</section>-->
-										  					</fieldset>
-										  					<fieldset class="col-sm-12 col-md-12 col-lg-4">
-																<input type="submit" value="Buscar">
-																<button class="btn btn-default" type="button" onclick="location.href='{{=URL('reportes','libro_diario')}}'"> Limpiar </button>
-															</fieldset>
-										  				</div>
-										  			</div>
-									  		</form>
-									  	</div>
-									</div>
-                     	</div>
-               			<div class="padding-10">
-               				<div  class="table-responsive">
-										<table class="table table-condensed">
-											<thead>
-												<tr class="poliza titulo">
-													<th>Op</th>
-													<th>Tipo</th>
-													<th>No. póliza</th>
-													<th>Fecha</th>
-													<th>Concepto póliza</th>
-													<th></th>
-													<th style="text-align: left;">Total póliza</th>
-												</tr>
-											</thead>
-											<tbody>
-												{{id = 0
-												for d in datos:
-													if id != d['id']:
-														id = d['id']}}
-														<tr class="poliza detalle" data-padre="{{=d['id']}}" data-abierto="false">
-															<td><i class="fa fa-chevron-down"></i></td>
-															<td>{{=d['tipo_poliza']}}</td>
-															<td>{{=d['id']}}</td>
-															<td>{{=d['f_poliza']}}</td>
-															<td>{{=d['concepto_general']}}</td>
-															<td style="text-align: right">Importe:</td>
-															<td style="text-align: right">{{=calcula_importe(d['id'])}}</td>
-														</tr>
-														<tr class="asiento titulo" data-hijo="{{=d['id']}}">
-															<th></th>
-															<th>No. cuenta</th>
-															<th>Depto</th>
-															<th>Descripción cuenta</th>
-															<th>Concepto asiento</th>
-															<th>Debe</th>
-															<th>Haber</th>
-														</tr>
-														<tr class="asiento detalle"  data-hijo="{{=d['id']}}">
-															<td></td>
-															<td>{{=d['num_cc']}}</td>
-															<td>--</td>
-															<td>{{=d['descripcion']}}</td>
-															<td>{{=d['concepto_asiento']}}</td>
-															<td>{{=d['debe']}}</td>
-															<td>{{=d['haber']}}</td>
-														</tr>
-													{{else:}}
-														<tr class=" asiento detalle"  data-hijo="{{=d['id']}}">
-															<td></td>
-															<td>{{=d['num_cc']}}</td>
-															<td>--</td>
-															<td>{{=d['descripcion']}}</td>
-															<td>{{=d['concepto_asiento']}}</td>
-															<td>{{=d['debe']}}</td>
-															<td>{{=d['haber']}}</td>
-														</tr>
-													{{pass
-												pass}}
-												<tr>
+  <!-- row -->
+  <div class="row">
+    <article class="col-sm-12">
+      <!-- new widget -->
+      <div class="jarviswidget" id="wid-id-0" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
+        <!-- widget options:
+             usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
+             data-widget-colorbutton="false"
+             data-widget-editbutton="false"
+             data-widget-togglebutton="false"
+             data-widget-deletebutton="false"
+             data-widget-fullscreenbutton="false"
+             data-widget-custombutton="false"
+             data-widget-collapsed="true"
+             data-widget-sortable="false"
+          -->
+    	<header>
+          <span class="widget-icon"> <i class="fa fa-book txt-color-darken"></i> </span>
+          <h2>Libro diario</h2>
+          <ul class="nav nav-tabs pull-right in" id="myTab">
+            <li class="active">
+              <a data-toggle="tab" href="#s1"><i class="fa fa-file-text-o"></i> <span class="hidden-mobile hidden-tablet">Reporte</span></a>
+            </li>
+            <li class>
+              <a data-toggle="tab" href="#s2"><i class="fa fa-search"></i> <span class="hidden-mobile hidden-tablet">Filtros</span></a>
+            </li>
+          </ul>
+       	</header>
+        <!-- widget div-->
+        <div class="no-padding">
+          <!-- widget edit box -->
+          <div class="jarviswidget-editbox">
+            test
+          </div>
+          <!-- end widget edit box -->
+          <div class="widget-body">
+            <!-- content -->
+            <div id="myTabContent" class="tab-content">
+              <div class="tab-pane fade active in padding-10 no-padding-bottom" id="s1">                     	
+               	<div class="padding-10">
+               	  <div  class="table-responsive">
+		    <table class="table table-condensed">
+		      <thead>
+			<tr class="poliza titulo">
+			  <th>Op</th>
+			  <th>Tipo</th>
+			  <th>No. póliza</th>
+			  <th>Fecha</th>
+			  <th>Concepto póliza</th>
+			  <th></th>
+			  <th style="text-align: left;">Total póliza</th>
+			</tr>
+		      </thead>
+		      <tbody>
+			{{id = 0
+			for d in datos:
+			if id != d['id']:
+			id = d['id']}}
+			<tr class="poliza detalle" data-padre="{{=d['id']}}" data-abierto="false">
+			  <td><i class="fa fa-chevron-down"></i></td>
+			  <td>{{=d['tipo_poliza']}}</td>
+			  <td>{{=d['id']}}</td>
+			  <td>{{=d['f_poliza']}}</td>
+			  <td>{{=d['concepto_general']}}</td>
+			  <td style="text-align: right">Importe:</td>
+			  <td style="text-align: right">{{=calcula_importe(d['id'])}}</td>
+			</tr>
+			<tr class="asiento titulo" data-hijo="{{=d['id']}}">
+			  <th></th>
+			  <th>No. cuenta</th>
+			  <th>Depto</th>
+			  <th>Descripción cuenta</th>
+			  <th>Concepto asiento</th>
+			  <th>Debe</th>
+			  <th>Haber</th>
+			</tr>
+			<tr class="asiento detalle"  data-hijo="{{=d['id']}}">
+			  <td></td>
+			  <td>{{=d['num_cc']}}</td>
+			  <td>--</td>
+			  <td>{{=d['descripcion']}}</td>
+			  <td>{{=d['concepto_asiento']}}</td>
+			  <td>{{=d['debe']}}</td>
+			  <td>{{=d['haber']}}</td>
+			</tr>
+			{{else:}}
+			<tr class=" asiento detalle"  data-hijo="{{=d['id']}}">
+			  <td></td>
+			  <td>{{=d['num_cc']}}</td>
+			  <td>--</td>
+			  <td>{{=d['descripcion']}}</td>
+			  <td>{{=d['concepto_asiento']}}</td>
+			  <td>{{=d['debe']}}</td>
+			  <td>{{=d['haber']}}</td>
+			</tr>
+			{{pass
+			pass}}
+			<tr>
 
-												</tr>
-											</tbody>
-										</table>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+			</tr>
+		      </tbody>
+		    </table>
+		  </div>
+		</div>
+	      </div>
+              <div class="tab-pane fade" id="s2"> 
+                <div class="padding-10">
+                  <div class="panel panel-info">
+		    <div class="panel-heading" id="abrir-campos-filtro" title="Mostrar/ocultar los filtros" style="cursor: pointer;">
+		      <h3 class="panel-title" style="font-size: 14px;">Filtros de búsqueda <i class="fa fa-chevron-down"></i></h3>
+		    </div>
+		    <div class="panel-body" id="campos-filtro">
+		      <form class="smart-form" method="POST" id="filtros" name="filtros">
+			<!--<article class="col-sm-12 col-md-12 col-lg-4">-->
+			<div role="content">
+			  <div class="widget-body no-padding" >
+			    <fieldset class="col-sm-12 col-md-12 col-lg-4">
+			      <section>
+				<label class="label">Tipo de póliza</label>
+				<label class="select">
+				  <select id="tipo-poliza" name="tipo_poliza_id" class="activo">
+				    <option value="">Todos</option>
+				    {{for tp in tipo_poliza:}}
+				    <option value="{{=tp.id}}" {{=XML("selected='selected'") if str(tp.id)==request.vars.tipo_poliza_id else ""}}>{{=tp.nombre}}</option>
+				    {{pass}}
+				  </select>
+				</label>
+			      </section>
+			      <section>
+				<label class="label">Fecha inicial</label>
+				<label class="input">
+				  <div class="input-group">
+				    <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+				    <input type="text" name="fecha_ini" class="activo fecha form-control input-sm" placeholder="Fecha inicio" value="{{=XML(request.vars.fecha_ini) if request.vars.fecha_ini else ''}}">
+				  </div>
+				</label>
+			      </section>
+			      <section>
+				<label class="label">Fecha final</label>
+				<label class="input">
+				  <div class="input-group">
+				    <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+				    <input type="text" name="fecha_fin" class="activo fecha form-control input-sm" placeholder="Fecha fin" value="{{=XML(request.vars.fecha_fin) if request.vars.fecha_fin else ''}}">
+				  </div>
+				</label>
+			      </section>
+			    </fieldset>
+			    <fieldset class="col-sm-12 col-md-12 col-lg-4">
+			      <section>
+				<label class="label">Concepto de la póliza</label>
+				<label class="input">
+				  <div class="input-group">
+				    <span class="input-group-addon"><i class="fa fa-edit"></i></span>
+				    <input type="text" name="concepto_general" class="activo form-control input-sm" placeholder="Concepto de la póliza" value="{{=XML(request.vars.concepto_general) if request.vars.concepto_general else ''}}">
+				  </div>
+				</label>
+			      </section>
+			      <section>
+				<label class="label"><input type="checkbox" id="num-poliza" > Número de póliza</label>
+				<label class="input">
+				  <div class="input-group">
+				    <span class="input-group-addon">
+				      #
+				    </span>
+				    <input type="text" class="form-control input-sm" id="campo-num-poliza" name="num_poliza" value="{{=XML(request.vars.num_poliza) if request.vars.num_poliza else ''}}">
+				  </div><!-- /input-group -->
+				</label>
+			      </section>
+			      <!--<section>
+				  <label class="label">Importe</label>
+				  <label class="input">
+				    <div class="input-group">
+				      <span class="input-group-addon">
+					$
+				      </span>
+				      <input type="text" class="form-control input-sm">
+				    </div>
+				  </label>
+			      </section>-->
+			    </fieldset>
+			    <fieldset class="col-sm-12 col-md-12 col-lg-4">
+			      <input type="submit" value="Buscar">
+			      <button class="btn btn-default" type="button" onclick="location.href='{{=URL('reportes','libro_diario')}}'"> Limpiar </button>
+			    </fieldset>
+			  </div>
 			</div>
-		</article>
+		      </form>
+		    </div>
+		  </div>
+                </div>
+              </div><!--fin s2-->
+	    </div>
+	  </div><!--fin s1-->
 	</div>
+      </div>
+    </article>
+  </div>
 </section>
 <script>
 	$(document).ready(function(){
@@ -247,17 +252,6 @@
 			$(".fecha").datepicker({
 				dateFormat: 'yy-mm-dd',
 			});
-
-		$('#campos-filtro').hide();
-		$('#abrir-campos-filtro').click(function(){
-			if ( $( "#campos-filtro" ).is( ":visible" ) ){
-				$(this).find('i').removeClass( "fa-chevron-up" ).addClass( "fa-chevron-down" );
-				$('#campos-filtro').hide('slow');
-			}else{
-				$(this).find('i').removeClass( "fa-chevron-down" ).addClass( "fa-chevron-up" );
-				$('#campos-filtro').show('slow');
-			}
-		});
 
 		document.getElementById('campo-num-poliza').disabled = true;
 
