--- a/views/default/index.html
+++ b/views/default/index.html
@@ -3,17 +3,28 @@
 <div id='content'>
     <div class='well'>
         {{if session.auth:}}
-        {{ult_sesion = db_maestro(db_maestro.auth_event.user_id == auth.user['id']).select(db_maestro.auth_event.time_stamp).last()}}
-            <div class='row'>
+            {{ult_sesion = db_maestro(db_maestro.auth_event.user_id == auth.user['id']).select(db_maestro.auth_event.time_stamp).last()}}
+        <div class="row">
+            <div class="col-md-12">
                 <div class='jumbotron'>
-                    <h1 class="page-title txt-color-blueDark">
-                        Bienvenido {{=auth.user['first_name'] + ' ' + auth.user['last_name']}}
-                    </h1>
+                    <div class="row">
+                        <div class="col-md-8">
+                            <h1 class="page-title txt-color-blueDark">
+                                Bienvenido {{=auth.user['first_name'] + ' ' + auth.user['last_name']}}
+                            </h1>    
+                        </div>
+                    </div>
                     {{if ult_sesion:}}
-                    <p>Ultima vez que iniciaste sesión: {{=ult_sesion.time_stamp}}</p>
+                    <div class="row">
+                        <div class="col-md-4 col-md-offset-8" style="text-align: right;">
+                            <p>Ultima vez que iniciaste sesión:</p>
+                            <p>{{=ult_sesion.time_stamp}}</p>                
+                        </div>
+                    </div>
                     {{pass}}
                 </div>
             </div>
+        </div>
             {{if mias:}}
             <div class='row'>
                 <header role="heading">
@@ -63,6 +74,18 @@
     </div><!--fin well-->
 </div><!--content-->
 <style>
+    .jumbotron{
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+    .jumbotron h1{
+        font-size: 40px;
+    }
+    .jumbotron p{
+        font-size: 15px;
+        font-weight: 100;
+        margin-bottom: 0;
+    }
     .thumbnail{
         border: 1px solid #bbbbbb;
         background: #cccccc;
@@ -84,35 +107,3 @@
         margin:10px;
     }
 </style>
-<script>
-    $(document).ready(function(){
-
-        $('.eliminar-empresa').click(function(e) {
-            id = $(this).attr('id');
-            nombre = $(this).data('nombre');
-            $.SmartMessageBox({
-                    title : "Eliminar empresa " + nombre,
-                    content : "¿Estas seguro de eliminar esta empresa?",
-                    buttons : "[Cancelar][Eliminar]",
-                }, function(ButtonPress, Value) {
-                    if (ButtonPress == "Eliminar") {
-
-                        $.ajax({
-                            type: "post",
-                            url: "{{=URL('empresa', 'eliminar')}}",
-                            data: {id: id},
-                            success: function (response) {
-                                console.log('good');
-                                location.reload();
-                            },
-                            error: function (response) {
-                                console.log('bad');
-                            },
-                        });
-                        return 0;
-                    }
-                });
-            e.preventDefault();
-        });
-    });
-</script>
