--- a/views/layout.html
+++ b/views/layout.html
@@ -588,6 +588,9 @@ header,h1,h2,h3,h4{
                                     <li>
                                         <a href="{{=URL('cc_empresa','cc_grid')}}"><i class="fa fa-fw "></i> Cuentas Contables </a>
                                     </li>
+                                    <li>
+                                        <a href="{{=URL('configuracion','saldo_inicial')}}"><i class="fa fa-fw "></i> Saldo inicial </a>
+                                    </li>
                                 </ul>
                             </li>
                             <li>
