Cambios en la sección de invitación

--- a/views/empresa/opciones.html
+++ b/views/empresa/opciones.html
@@ -21,6 +21,8 @@
                 <div class="alert alert-success">
                     <h2 style="color: #356635;"><i class='fa fa-hand-o-right'></i> Compartir</h2>
                     <p>Comparte tu empresa con otros usuarios</p>
+                    <br>
+                    {{=form}}
                 </div>
             </div>            
             <div class="col-md-4">
