--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -105,8 +105,18 @@ $(document).ready(function(){
 
 </style>
 
-
-
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <legend>
+            <h1>
+                <p>
+                <i class="fa-fw fa fa-file-text-o"></i>
+                Pólizas contables</p>
+                <small>Listado de pólizas contables</small>
+            </h1>
+        </legend>
+    </div>
+</div>
                                 <!-- widget grid -->
                                 <section id="widget-grid" class="">
                                         <!-- row -->
