Arreglando el link

--- a/views/layout.html
+++ b/views/layout.html
@@ -578,7 +578,7 @@ header,h1,h2,h3,h4{
 									<i class="fa fa-filter"></i>
 									Balanza
 								</a>
-								 <a href="{{=URL('reportes','balance_general')}}">
+								 <a href="{{=URL('reportes','cuentas_con_saldo')}}">
 									<i class="fa fa-bar-chart-o"></i>
 									Balance general
 								</a>
