--- a/views/poliza/listar.html
+++ b/views/poliza/listar.html
@@ -52,6 +52,7 @@ $(document).ready(function(){
         var datos = {id: id, value:value};
 
         $.post("{{=URL('actualiza_poliza')}}", datos).success(function(data){
+            console.log(id);
             $(id).html(data);
         });
     });
@@ -62,7 +63,9 @@ $(document).ready(function(){
         var value = $(this).val();
         var datos = {id: id, value:value};
 
-        $.post("{{=URL('actualiza_poliza')}}", datos).success(function(data){
+        $.post("{{=URL('actualiza_tipo_poliza')}}", datos).success(function(data){
+            id = id.replace('.', '');
+            id = '#' + id.replace('tipo', 'folio');
             $(id).html(data);
         });
     });
@@ -89,6 +92,7 @@ $(document).ready(function(){
         indicator: "Actualizando...",
     });
 
+    /*
     $.getJSON('{{=URL("carga_tipo_poliza")}}', function(json) {
 
         var dataArray = [];
@@ -106,6 +110,7 @@ $(document).ready(function(){
             });
         });
     });
+    */
 
 });
 </script>
