--- a/views/reportes/libro_diario.html
+++ b/views/reportes/libro_diario.html
@@ -92,7 +92,7 @@
 												  <td><i class="fa fa-chevron-down"></i></td>
 												  <td>{{=d['tipo_poliza']}}</td>
 												  <td>{{=d['id']}}</td>
-												  <td>{{=d['f_poliza']}}</td>
+												  <td>{{=d['creada_en']}}</td>
 												  <td>{{=d['concepto_general']}}</td>
 												  <td style="text-align: right">Importe:</td>
 												  <td style="text-align: right">{{=calcula_importe(d['id'])}}</td>
