--- a/views/default/empresa.html
+++ b/views/default/empresa.html
@@ -134,11 +134,12 @@
 						// do a random walk
 						while (data.length < totalPoints) {
 							var prev = data.length > 0 ? data[data.length - 1] : 50;
-							var y = prev + Math.random() * 10 - 5;
+							/*var y = prev + Math.random() * 10 - 5;
 							if (y < 0)
 								y = 0;
 							if (y > 100)
-								y = 100;
+								y = 100;*/
+							var y = 0;
 							data.push(y);
 						}
 
@@ -209,8 +210,8 @@
 
 				if ($("#site-stats").length) {
 
-					var pageviews = [[1, 75], [3, 87], [4, 93], [5, 127], [6, 116], [7, 137], [8, 135], [9, 130], [10, 167], [11, 169], [12, 179], [13, 185], [14, 176], [15, 180], [16, 174], [17, 193], [18, 186], [19, 177], [20, 153], [21, 149], [22, 130], [23, 100], [24, 50]];
-					var visitors = [[1, 65], [3, 50], [4, 73], [5, 100], [6, 95], [7, 103], [8, 111], [9, 97], [10, 125], [11, 100], [12, 95], [13, 141], [14, 126], [15, 131], [16, 146], [17, 158], [18, 160], [19, 151], [20, 125], [21, 110], [22, 100], [23, 85], [24, 37]];
+					var pageviews = [[1, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 0], [12, 0], [13, 0], [14, 0], [15, 0], [16, 0], [17, 0]];
+					var visitors = [[1, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0], [9, 0], [10, 0], [11, 0], [12, 0], [13, 0], [14, 0], [15, 0], [16, 0], [17, 0]];
 					//console.log(pageviews)
 					var plot = $.plot($("#site-stats"), [{
 						data : pageviews,
@@ -279,15 +280,18 @@
 
 					var data1 = [];
 					for (var i = 0; i <= 12; i += 1)
-						data1.push([i, parseInt(Math.random() * 30)]);
+						//data1.push([i, parseInt(Math.random() * 30)]);
+						data1.push([i, 0]);
 
 					var data2 = [];
 					for (var i = 0; i <= 12; i += 1)
-						data2.push([i, parseInt(Math.random() * 30)]);
+						//data2.push([i, parseInt(Math.random() * 30)]);
+						data2.push([i, 0]);
 
 					var data3 = [];
 					for (var i = 0; i <= 12; i += 1)
-						data3.push([i, parseInt(Math.random() * 30)]);
+						//data3.push([i, parseInt(Math.random() * 30)]);
+						data3.push([i, 0]);
 
 					var ds = new Array();
 
