--- a/views/reportes/balance_general.html
+++ b/views/reportes/balance_general.html
@@ -1,6 +1,4 @@
 {{extend 'layout.html'}}
-
-<link href="{{=URL('static', 'css/tabs.css')}}" rel="stylesheet">
 <style>
 table > tbody > tr{
     -webkit-transition: all .2s ease-in-out;
@@ -20,79 +18,50 @@ table > tbody > tr:hover{
 }
 
 </style>
-<div id="modal_editar" class="modalmask">
-    <div class="modalbox movedown">
-        <a href="#close" title="Cerrar" class="close">X</a>
-        <h2>Editar Cuenta</h2>
-        <div id="form_editar">
-        </div>
+
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <legend>
+            <h1>
+                <i class="fa-fw fa fa-bar-chart-o"></i>
+                Balance General
+            </h1>
+        </legend>
     </div>
 </div>
-
-<div id="modal_crear" class="modalmask">
-    <div class="modalbox movedown">
-        <a href="#close" title="Cerrar" class="close">X</a>
-        <h2>Crear Cuenta</h2>
-        <div id="form_crear">
-        </div>
+<!-- widget grid -->
+<section id="widget-grid" class="">
+    <!-- row -->
+    <div class="row">
+        <article class="col-sm-12">
+            <!-- new widget -->
+            <div class="jarviswidget" id="wid-id-0" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
+                <header>
+                    <span class="widget-icon"> <i class="fa fa-bar-chart-o txt-color-darken"></i> </span>
+                    <h2 style="font-weight: bold">Balance General</h2>
+                </header>
+                <!-- widget div-->
+                <div class="no-padding">
+                    <div class="widget-body">
+                        <!-- content -->
+                        <div id="myTabContent" class="tab-content">
+                            <div class="tab-pane fade active in no-padding-bottom" id="s1">
+                                <div class="padding-10">
+                                    <ul id="expList">
+                                        {{=balance}}
+                                    </ul>
+                                </div>
+                            </div>
+                            <!-- end s1 tab pane -->
+                        </div>
+                        <!-- end content -->
+                    </div>
+                </div>
+                <!-- end widget div -->
+            </div>
+            <!-- end widget -->
+        </article>
     </div>
-</div>
-
-
-                                <!-- widget grid -->
-                                <section id="widget-grid" class="">
-                                        <!-- row -->
-                                        <div class="row">
-                                                <article class="col-sm-12">
-                                                        <!-- new widget -->
-                                                        <div class="jarviswidget" id="wid-id-0" data-widget-togglebutton="false" data-widget-editbutton="false" data-widget-fullscreenbutton="false" data-widget-colorbutton="false" data-widget-deletebutton="false">
-                                                                <!-- widget options:
-                                                                usage: <div class="jarviswidget" id="wid-id-0" data-widget-editbutton="false">
-                                                                data-widget-colorbutton="false"
-                                                                data-widget-editbutton="false"
-                                                                data-widget-togglebutton="false"
-                                                                data-widget-deletebutton="false"
-                                                                data-widget-fullscreenbutton="false"
-                                                                data-widget-custombutton="false"
-                                                                data-widget-collapsed="true"
-                                                                data-widget-sortable="false"
-                                                                -->
-                                                                <header>
-                                                                        <span class="widget-icon"> <i class="fa fa-bar-chart-o txt-color-darken"></i> </span>
-                                                                        <h2 style="font-weight: bold">Balance General</h2>
-                                                                        <ul class="nav nav-tabs pull-right in" id="myTab">
-                                                                                <li class="active">
-                                                                                        <a data-toggle="tab" href="#s1"><i class="fa fa-bar-chart-o"></i> <span class="hidden-mobile hidden-tablet">Listado</span></a>
-                                                                                </li>
-                                                                        </ul>
-                                                                </header>
-                                                                <!-- widget div-->
-                                                                <div class="no-padding">
-                                                                        <!-- widget edit box -->
-                                                                        <div class="jarviswidget-editbox">
-                                                                                test
-                                                                        </div>
-                                                                        <!-- end widget edit box -->
-                                                                        <div class="widget-body">
-                                                                                <!-- content -->
-                                                                                <div id="myTabContent" class="tab-content">
-                                                                                        <div class="tab-pane fade active in padding-10 no-padding-bottom" id="s1">
-                                                <div class="padding-10">
-                                                    <ul id="expList">
-                                                        {{=balance}}
-                                                    </ul>
-                                                                                                </div>
-                                                                                        </div>
-                                                                                        <!-- end s1 tab pane -->
-                                                                                </div>
-                                                                                <!-- end content -->
-                                                                        </div>
-                                                                </div>
-                                                                <!-- end widget div -->
-                                                        </div>
-                                                        <!-- end widget -->
-                                                </article>
-                                        </div>
-                                        <!-- end row -->
-                                </section>
-                                <!-- end widget grid -->
+<!-- end row -->
+</section>
+<!-- end widget grid -->
