--- a/views/cc_empresa/cc_wizard.html
+++ b/views/cc_empresa/cc_wizard.html
@@ -99,7 +99,7 @@
                                                     <form class="form-horizontal" id="form-wizard" action="{{=URL('wiz_cc')}}" method="post" enctype="multipart/form-data">
 													<fieldset>
                                                         <div>
-    Para configurar el catálogo de cuentas debe elegir si utilizará el catálogo de cuentas del SAT mostrado previamente o si lo configurará posteriormente creando todas las cuentas necesarias.
+    Para configurar el catálogo de cuentas debe elegir si utilizará el catálogo de cuentas del SAT mostrado previamente o si lo configurará posteriormente creando todas las cuentas necesarias, de igual manera puede cargar un catálogo desde un archivo CSV.
                                         </div><br><br>
                                                         
 														<div class="form-group ">
